# cfd-mpc-wecs

./: .gitignore  CMakeLists.txt  FlowGravityForcing.cpp  FlowGravityForcing.h  GravityForcing.cpp  GravityForcing.h  LSLocateGasInterface.cpp  LSLocateGasInterface.h  LevelSetInitialCondition.cpp  LevelSetInitialCondition.h  Makefile  README.md  SetFluidGasSolidDensity.cpp  SetFluidGasSolidDensity.h  SetFluidGasSolidViscosity.cpp  SetFluidGasSolidViscosity.h  SetLSProperties.cpp  TagLSRefinementCells.cpp  TagLSRefinementCells.h  input3d.cyl  input3d_irregwave.cyl  load_mpc_parameters.m  main.cpp  vcyl_driving_script.m
BEMIO/: Excitation_IRF.m  bemio.m
BEM_data/: AQWA_ANALYSIS.AH1  Diffraction_IRF.m  get_bemio_files.sh  process_BEM_data.m
MPC_matlab_code/: AR_prediction.m  BRETSCHNEIDER.m  F_excitation.m  Fexc_for_1st_order_waves.m  Fexc_for_irreg_waves.m  JONSWAP.m  augmented_matrix.m  calculate_NLFK_force.m  calculate_diffraction_force.m  calculate_mpc_matrices.m  calculate_pressure.m  constraint.m  construct_radiation_SS.m  create_mesh.m  discrete_time_matrix.m  get_control_force.m  get_level_set_for_cylinder.m  get_level_set_for_wave.m  get_obj_fun_and_grad_fun.m  get_radiation_damping_xr.m  mpc_matrix.m  mpc_quadprog_G_matrix.m  mpc_quadprog_H_matrix.m  pow.m
MPC_matlab_code/BEMIO/: bemio.m  generate_BEM_data.m
